logs/Slang/chapter-8/8.26.3--type_access_implements_invalid.sv.log
name: type_access_implements_invalid
description: access types from implemented class
should_fail: 1
tags: 8.26.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements_invalid.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements_invalid.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements_invalid.sv:13:2: error: language feature not yet supported
	class Hello implements ihello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements_invalid.sv:19:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.3--type_access_implements_invalid.sv:22:9: error: language feature not yet supported
		obj = new;
		      ^~~
